Switched email validator + first attempt to fix overflow problem

--- a/src/components/SearchResult/SearchResult.scss
+++ b/src/components/SearchResult/SearchResult.scss
@@ -15,6 +15,10 @@
 	}
 }
 
+.ais-InstantSearch__root .container {
+	overflow: hidden;
+}
+
 .ais-SearchBox__root {
 	display: block;
 	margin-top: 0;
